--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,18 @@
   <body class="container">
     <button id="complimentButton">Get a compliment</button>
     <button id = "fortuneButton">Get a fortune random</button>
-<form>
+    <button id = "quoteButton"> Gat a Quotes random</button>
+
+    <form>
   <input id="complimentInput"/>
   <button id="addComplimentButton">Add compliment</button>
+  <input id="fortuneInput"/>
+  <button id="addFortuneButton">add fortune</button>
+  <input id="quoteInput"/>
+  <button id="addQuoteButton">add quote</button>
+</form>
+<form>
+
 </form>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
